# glia

./: .gitignore  CMakeLists.txt  README.md  package.json
scripts/: build.sh  make.sh
src/: glia.cpp  options.cpp
src/common/logging/: CMakeLists.txt
src/common/logging/include/glia/common/: logging.h
src/common/logging/src/: logging.cpp
src/common/options/: CMakeLists.txt
src/common/options/include/glia/common/: options.h
src/common/options/src/: options.cpp
src/common/proto/: server.proto
src/gliac/: CMakeLists.txt
src/gliac/include/gliac/: app.h  options.h
src/gliac/src/: app.cpp  main.cpp  options.cpp
src/gliad/: CMakeLists.txt
src/gliad/include/glia/gliad/: app.h  global.h  options.h
src/gliad/include/glia/gliad/services/: server.h
src/gliad/src/: app.cpp  global.cpp  main.cpp  options.cpp
src/gliad/src/services/: server.cpp
tools/cmake/: FindGRPC.cmake
